welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
	if (Math.abs(b-a)=0){
                 ^